updates to site

--- a/Series Project/page1.html
+++ b/Series Project/page1.html
@@ -3,7 +3,7 @@
     <title>Pieces of Us Julie</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/Users/yousungkim/Desktop/Website/Series Project/style_julie.css"/>
+    <link rel="stylesheet" href="style_julie.css"/>
   </head>
 
   <div class="popup">
@@ -11,10 +11,8 @@
       <div id="open-modal" class="modal-window">
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
-        <h1>Title: Identity</h1>
-        <div>This short work depicts my ongoing struggle <br>
-          to figure out who I am. I think that the process of self discovery
-          is the hardest, yet one of the most meaningful journeys in our lives.</div>
+        <h1>Title: <br>What Do You Love?</h1>
+        <div>Overusage of certain questions like "what do you love?" does not make answering the question any easier. What are some commonly asked questions that you struggle to answer?</div>
       </div>
       </div>
   </div>
@@ -24,7 +22,7 @@
 
 <body class="index1">
     <div class="juliepage1">
-    <a href="/Users/yousungkim/Desktop/Website/Series Project/index.html"<h1 id="left">Pieces of Us</h1></a>
+    <a href="index.html"<h1 id="left">Pieces of Us</h1></a>
     <h1 id="right">From Julie</h1>
     <img id="whitepaper" src="diaryimage1.png" alt="white paper" width = 800px>
 
