--- a/Series Project/peterpage1.html
+++ b/Series Project/peterpage1.html
@@ -12,7 +12,7 @@
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
         <h1>Title: <br>My Stormy Tapestry</h1>
-        <div></div>
+        <div>This poetry depicts my struggle to come to grips with my life right now. Although I feel crushed with the amount of work and reponsibilites I have, I am relying on my friends and family to get me through!</div>
       </div>
       </div>
   </div>
