--- a/Series Project/peterpage3.html
+++ b/Series Project/peterpage3.html
@@ -11,10 +11,8 @@
       <div id="open-modal" class="modal-window">
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
-        <h1>Title: My Stormy Tapestry</h1>
-        <div>This short work depicts my ongoing struggle <br>
-          to figure out who I am. I think that the process of self discovery
-          is the hardest, yet one of the most meaningful journeys in our lives.</div>
+        <h1>Title: <br>My Stormy Tapestry</h1>
+        <div>This poetry depicts my struggle to come to grips with my life right now. Although I feel crushed with the amount of work and reponsibilites I have, I am relying on my friends and family to get me through!</div>
       </div>
       </div>
   </div>
