--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,7 @@
 
     <nav id="nav">
       <a href="index_julie.html">Previous</a> |
-      <a href="page2.HTML">Next</a>
+      <a href="page2.html">Next</a>
     </nav>
 
 
