--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,7 @@
 
     <nav id="nav">
       <a href="page1.html">Previous</a> |
-      <a href="page3.HTML">Next</a>
+      <a href="page3.html">Next</a>
     </nav>
 
 
