--- a/peterpage1.html
+++ b/peterpage1.html
@@ -12,7 +12,8 @@
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
         <h1>Title: <br>My Stormy Tapestry</h1>
-        <div>This poetry depicts my struggle to come to grips with my life right now. Although I feel crushed with the amount of work and reponsibilites I have, I am relying on my friends and family to get me through!</div>
+        This poetry depicts my struggle to come to grips with my life right now. Although I feel crushed with the amount of work and reponsibilites I have, I am relying on my friends and family to get me through!
+        <div></div>
       </div>
       </div>
   </div>
@@ -44,7 +45,7 @@ The fear corrupts, the heart clenches <br>
 The tears fall, the soul stills</p>
 <nav>
   <a href="index_peter.html">Previous</a> |
-  <a href="peterpage2.HTML">Next</a>
+  <a href="peterpage2.html">Next</a>
 </nav>
 
 
