--- a/peterpage2.html
+++ b/peterpage2.html
@@ -45,7 +45,7 @@ Longer than the Bayeux and thicker than the Hoover<br>
 </p>
 <nav>
   <a href="peterpage1.html">Previous</a> |
-  <a href="peterpage3.HTML">Next</a>
+  <a href="peterpage3.html">Next</a>
 </nav>
 
 
