--- a/aboutcontributors.html
+++ b/aboutcontributors.html
@@ -17,7 +17,7 @@
     <p> Name: Ally <br>
       Major: Economics<br>
       Hobby: Singing & listening to music <br>
-      One item from bucket list: Backpacking trip in Europe</p>
+      One item from bucket list: Backpacking trip to Europe</p>
 
   </div>
 
@@ -26,7 +26,7 @@
     <p>Name: Annie <br>
       Major: Ecology & Evolutionary Biology <br>
       Hobby: Learning about the stock market <br>
-      One item from bucket list: To climb Mt. Everest <br>
+      One item from bucket list: Climbing Mt. Everest <br>
 </p>
   </div>
 
