--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
       <h1>About "Pieces of Us"</h1>
       <div>“Pieces of Us” is a handmade website dedicated to sharing the
-        stories of my friends, created with a goal of capturing the ephemeral
+        stories of my friends and has been created with a goal of capturing the ephemeral
         or the ongoing thoughts in our head. <br>
 </div>
     </div>
