--- a/index_ally.html
+++ b/index_ally.html
@@ -12,8 +12,8 @@
     <div>
       <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
       <h1>Title: <br>Identity</h1>
-      <div>This short work depicts my ongoing internal struggle
-        to figure out what kind of person I am. Nonetheless, I believe that the process of self discovery
+      <div>This short story depicts my ongoing internal struggle
+        in figuring out what kind of person I am. Nonetheless, I believe that the process of self discovery
         is one of the most meaningful journeys that we take in our lives.</div>
     </div>
     </div>
