--- a/index_annie.html
+++ b/index_annie.html
@@ -13,8 +13,8 @@
       <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
       <h1>Title: <br>
         My Dusty Monitor</h1>
-      <div>We all have that one thing we bought yet have never opened of months or years.
-      Although COVID-19 brought more misfortune than fortunes, at least it provided me
+      <div>We all have that one thing we bought, yet have yet to use or open for months or even years.
+      Although COVID-19 brought more misfortunes than fortunes, at least it provided me
     with enough incentives to finally open my dusty monitor.</div>
     </div>
     </div>
