--- a/aboutcontributors.html
+++ b/aboutcontributors.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>Pieces of Us Ally</title>
+    <title>About Contributors</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="aboutcontributors.css"/>
+    <link rel="icon" type="png" href="favicon.png">
   </head>
 
 <body class="index">
