--- a/index_annie.html
+++ b/index_annie.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style_annie.css"/>
+    <link rel="icon" type="png" href="favicon.png">
   </head>
 
   <div class="popup">
