--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="png" href="favicon.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://piecesofus.site/">
+    <meta property="og:title" content="Pieces of Us">
+    <meta property="og:description" content="Pieces of Us” is a handmade website dedicated to sharing the
+      stories of my friends, created with the goal of capturing the ephemeral
+      or the ongoing thoughts in our head.">
+    <meta name="twitter:url" content="https://piecesofus.site/">
+    <meta name="twitter:title" content="Pieces of Us">
   </head>
 
   <div class="popup">
@@ -105,7 +113,7 @@
     </div>
 
     <div class="footer">
-      <p>Created by Ally Kim on March 20, 2021 </p>
+      <p>Created by Ally Kim on Spring 2021 </p>
     </div>
 
 
