--- a/index_ally.html
+++ b/index_ally.html
@@ -8,7 +8,7 @@
   </head>
 
   <div class="popup">
-    <a href="#open-modal">About<br>Work</a>
+    <a href="#open-modal">About Work</a>
     <div id="open-modal" class="modal-window">
     <div>
       <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
@@ -25,43 +25,33 @@
   <h1 id="right">From Ally</h1>
 
  <div class="allypage1">
-   <p id="1">*</p>
    <p>The world is full of color.</p>
    <img src="watercolor.png" alt="color palette" width="500">
    <a href="#2">
-   <h2>Page 1 - Next Page</h2></a>
  </div>
 
  <div class="allypage2">
-   <p id="2">*</p>
    <img id="page2circle" src="circle.png" alt="circle" width="350">
    <p id="page2word">If I had a color, I wonder what color I would be.</p>
    <a href="#3">
-   <h2>Page 2 - Next Page</h2></a>
  </div>
 
 <div class="allypage3">
-  <p id="3">*</p>
  <img id="page3circle" src="longcircle.png" alt="circle" width="350">
  <p id="page3word">To be honest, I am scared that I might be colorless.</p>
  <a href="#4">
- <h2>Page 3 - Next Page</h2></a>
 </div>
 
 <div class="allypage4">
-  <p id="4">*</p>
  <img id="page4circle" src="wave.png" alt="wave" width="800" >
  <p id="page4word">What do I love? What do I hate? <br>
    There are so many things about myself <br>
    that I don't know.</p>
    <a href="#5">
-   <h2 id="page4nextpage">Page 4 - Next Page</h2></a>
 </div>
 
 <div class="allypage5">
-  <p id="5">*</p>
  <p id="page5word">Who is the real me? Which is the true me?</p>
-  <h2> Page 5</h2>
 </div>
 
 <div id="respond">
