--- a/index_annie.html
+++ b/index_annie.html
@@ -8,7 +8,7 @@
   </head>
 
   <div class="popup">
-    <a href="#open-modal">About<br>Work</a>
+    <a href="#open-modal">About Work</a>
     <div id="open-modal" class="modal-window">
     <div>
       <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
@@ -27,15 +27,14 @@
 <body class="index">
 
  <div class="anniepage1">
-   <p id="1">*</p>
+   <br><br><br> <br>
    <p>I bought a Dell monitor in freshman year
      of college using a one-time scholarship.<br><br><br> <br> </p>
    <a href="#2">
-   <h2>Page 1 - Next Page</h2></a>
  </div>
 
  <div class="anniepage2">
-   <p id="2">*<br> <br><br> </p>
+  <br> <br><br>
    <img src="lightbulb.png" alt="thinking about money" width="100">
    <img src="lightbulb.png" alt="thinking about money" width="100">
     <img src="lightbulb.png" alt="thinking about money" width="100">
@@ -49,47 +48,42 @@
 
    <p id="page2word">"Better use this money," I thought.</p>
    <a href="#3">
-   <h2>Page 2 - Next Page</h2></a>
  </div>
 
 <div class="anniepage3">
-  <p id="3">*<br> <br> </p>
-<img src="car.png" alt="car" width="400">
- <p id="page3word">The monitor box sat in my basement for years, <br>
+  <br> <br>
+  <img src="car.png" alt="car" width="400">
+  <p id="page3word">The monitor box sat in my basement for years, <br>
    never worth the effort of transporting it to school. <br> </p>
- <a href="#4">
- <h2>Page 3 - Next Page</h2></a>
+  <a href="#4">
 </div>
 
 
 <div class="anniepage4">
-    <p id="4">*</p><br><br>
- <p id="page4word">Until COVID-19 hit, <br>
+  <br><br>
+  <p id="page4word">Until COVID-19 hit, <br>
    and I began all-remote classes. <br>
    As I stared at my 13" laptop screen every day, <br>
    I thought about my unopened monitor at home. </p><br><br><br>
-   <a href="#5">
-   <h2 id="page4nextpage">Page 4 - Next Page</h2></a>
+   <a href="#5"></a>
 </div>
 
 <div class="anniepage5">
-  <p id="5">*</p>
   <img id="page4" src="time.png" alt="thinking" width="250">
   <p id="page5word">Surely, this was the time?</p>
-  <h2> Page 5</h2>
 </div>
 
 <div id="respond">
   <h3>Leave a Comment</h3>
   <form action="post_comment.php" method="post" id="commentform">
 
-    <label for="comment_author" class="required">Your name</label>
+    <label for="comment_author" class="required">Name</label>
     <input type="text" name="comment_author" id="comment_author" value="" tabindex="1" required="required">
 
-    <label for="email" class="required">Your email;</label>
+    <label for="email" class="required">Email</label>
     <input type="email" name="email" id="email" value="" tabindex="2" required="required">
 
-    <label for="comment" class="required">Your message</label>
+    <label for="comment" class="required">Message</label>
     <textarea name="comment" id="comment" rows="10" tabindex="4"  required="required"></textarea>
 
     <input type="hidden" name="comment_post_ID" value="1" id="comment_post_ID" />
