--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
   </head>
 
   <div class="popup">
-      <a href="#open-modal">About<br>Work</a>
+      <a href="#open-modal">About Work</a>
       <div id="open-modal" class="modal-window">
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
