--- a/peterpage3.html
+++ b/peterpage3.html
@@ -8,7 +8,7 @@
   </head>
 
   <div class="popup">
-      <a href="#open-modal">About<br>Work</a>
+      <a href="#open-modal">About Work</a>
       <div id="open-modal" class="modal-window">
       <div>
         <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
@@ -53,13 +53,13 @@ For the tapestry to rip.<br></p>
   <h3>Leave a Comment</h3>
   <form action="post_comment.php" method="post" id="commentform">
 
-    <label for="comment_author" class="required">Your name</label>
+    <label for="comment_author" class="required">Name</label>
     <input type="text" name="comment_author" id="comment_author" value="" tabindex="1" required="required">
 
-    <label for="email" class="required">Your email;</label>
+    <label for="email" class="required">Email</label>
     <input type="email" name="email" id="email" value="" tabindex="2" required="required">
 
-    <label for="comment" class="required">Your message</label>
+    <label for="comment" class="required">Message</label>
     <textarea name="comment" id="comment" rows="10" tabindex="4"  required="required"></textarea>
 
     <input type="hidden" name="comment_post_ID" value="1" id="comment_post_ID" />
