--- a/aboutcontributors.html
+++ b/aboutcontributors.html
@@ -60,7 +60,7 @@
 
 </body>
 <div class="footer">
-  <p>Created by Ally Kim on March 20, 2021 </p>
+  <p>Created by Ally Kim on Spring 2021 </p>
 </div>
 
 
