--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
     <a href="aboutcontributors.html"<h1 id="contributors">About Contributors</h1></a>
+    <a href="gathering.html"<h1 id="gathering">Virtual Gathering</h1></a>
 
     <div class="filler">
     </div>
