--- a/gathering.html
+++ b/gathering.html
@@ -20,9 +20,7 @@
   </div>
 
   <div class="video">
-    <iframe width="560" height="315"
-    src="https://youtu.be/x-_P7fHBVxs" class="center2">
-    </iframe>
+    <iframe class="center2" width="560" height="315" src="https://www.youtube.com/embed/x-_P7fHBVxs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
 </body>
